--- a/Index.html
+++ b/Index.html
@@ -173,7 +173,7 @@ function drawEverything () {
   colorRect(Paddle1X,Paddle1Y,PaddleWidth,PaddleHeight,'blue');
   
    //paddle2
-  colorRect(canvas.width-PaddleWidth,Paddle2Y,PaddleWidth,PaddleHeight,'blue');
+  colorRect(canvas.width-PaddleWidth,Paddle2Y,PaddleWidth,PaddleHeight,'red');
   
   // Net
   drawNet();
